--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,21 @@
   min-height: 100vh;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: var(--max-width);
+  width: 100%;
+  z-index: 2;
+}
+
+.content button {
+  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
+  border-radius: var(--border-radius);
+}
+
 .description {
   display: inherit;
   justify-content: inherit;
