--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  margin-top: 8rem;
+  padding: 20rem;
   min-height: 100vh;
 }
 
@@ -143,8 +144,12 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .main {
+    padding: 12rem 0.3rem;
+  }
+  
   .content {
-    padding: 4rem;
+    padding: 1rem;
   }
 
   .grid {
